Fixed the top header on mobile size screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -238,11 +238,31 @@ input[name='q']::placeholder {
 
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 140px;
+        padding-top: 116px;
     }
 
     body {
         height: calc(100vh - 116px);
     }
-}
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
 
